added log4j2.xml